--- a/FamilyBudget/Views/Home/Index.cshtml
+++ b/FamilyBudget/Views/Home/Index.cshtml
@@ -7,7 +7,7 @@
 <h1>Index</h1>
 
 <div id="projectModal" class="modal fade">
-    <div id="projectDialogContent" class="modal-dialog modal-dialog-centered"></div>
+    <div id="projectDialogContent" class="modal-dialog modal-lg modal-dialog-centered"></div>
 </div>
 
 <div class="list-group">
@@ -19,8 +19,6 @@
                 @Html.DisplayFor(modelItem => item.Name)
             </span>
 
-            <i id="@item.Id" class="bi bi-wallet2  fa-lg addCharge mr-2"></i>
-            <i id="@item.Id" class="bi bi-bag-plus fa-lg addIncome mr-2"></i>
             <i id="@item.Id" class="bi bi-x-lg projectDelete"></i>
         </a>
     }
@@ -31,36 +29,10 @@
     <script type="text/javascript">
         $(function () {
             $.ajaxSetup({ cache: false });
-            $(".addCharge").click(function (e) {
-                e.preventDefault();
-                $.get("Modal/AddCharge/" + this.id, function (data) {
-                    $('#projectDialogContent').html(data).removeClass('modal-lg');
-                    $('#projectModal').modal('show');
-                });
-            });
-        })
-    </script>
-
-    <script type="text/javascript">
-        $(function () {
-            $.ajaxSetup({ cache: false });
-            $(".addIncome").click(function (e) {
-                e.preventDefault();
-                $.get("Modal/AddIncome/" + this.id, function (data) {
-                    $('#projectDialogContent').html(data).removeClass('modal-lg');
-                    $('#projectModal').modal('show');
-                });
-            });
-        })
-    </script>
-
-    <script type="text/javascript">
-        $(function () {
-            $.ajaxSetup({ cache: false });
             $(".projectDelete").click(function (e) {
                 e.preventDefault();
                 $.get("Modal/ProjectDelete/" + this.id, function (data) {
-                    $('#projectDialogContent').html(data).addClass('modal-lg');
+                    $('#projectDialogContent').html(data);
                     $('#projectModal').modal('show');
                 });
             });
