--- a/FamilyBudget/Views/Modal/AddIncome.cshtml
+++ b/FamilyBudget/Views/Modal/AddIncome.cshtml
@@ -16,14 +16,17 @@
         }
         else
         {
-            <h3 class="modal-title">Create income.</h3>
+            <h3 class="modal-title">Add income.</h3>
         }
 
         <button class="bi bi-x-lg btn" data-dismiss="modal" aria-label="Close"></button>
     </div>
     @if (Model.IsValid)
     {
-        <form asp-controller="FinOperations" asp-action="Create">
+        <form asp-controller="FinOperations" asp-action="Create"
+        asp-route-fintype="@Model.FinType"
+         asp-route-projectid="@Model.ProjectId"
+        asp-route-categoryid="@Model.CategoryId">
             <div class="modal-body">
                 <label asp-for="Value" class="control-label"></label>
                 <input asp-for="Value" class="form-control" />
