--- a/FamilyBudget/Views/Modal/AddIncome.cshtml
+++ b/FamilyBudget/Views/Modal/AddIncome.cshtml
@@ -1,4 +1,4 @@
-﻿@model FamilyBudget.ModalViewModels.AddIncomeModel
+﻿@model FamilyBudget.ModalViewModels.AddFinOpModel
 
 @{
     ViewData["Title"] = "AddIncome";
@@ -24,9 +24,10 @@
     @if (Model.IsValid)
     {
         <form asp-controller="FinOperations" asp-action="Create"
-        asp-route-fintype="@Model.FinType"
-         asp-route-projectid="@Model.ProjectId"
-        asp-route-categoryid="@Model.CategoryId">
+          asp-route-fintype="@Model.FinType"
+          asp-route-projectid="@Model.ProjectId"
+          asp-route-categoryid="@Model.CategoryId"
+          asp-route-projectmemberid="@Model.ProjectMemberId">
             <div class="modal-body">
                 <label asp-for="Value" class="control-label"></label>
                 <input asp-for="Value" class="form-control" />
