Сделал модалку + кнопку для создания нового проекта

--- a/FamilyBudget/Views/Home/Index.cshtml
+++ b/FamilyBudget/Views/Home/Index.cshtml
@@ -4,11 +4,33 @@
     ViewData["Title"] = "Home Page";
 }
 
-<h1>Index</h1>
-
 <div id="projectDeleteModal" class="modal fade">
     <div id="projectDeleteDialogContent" class="modal-dialog modal-dialog-centered modal-lg"></div>
 </div>
+
+<div id="projectCreateModal" class="modal fade">
+    <div id="projectCreateDialogContent" class="modal-dialog modal-dialog-centered modal-lg"></div>
+</div>
+
+
+@if (Model.Count() == 0)
+{
+    <p>
+        <button type="button" class="btn btn-success btn-lg btn-block projectCreate">
+            <i class="bi bi-plus-circle"></i>
+            Create new project
+        </button>
+    </p>
+}
+else
+{
+    <p>
+        <button type="button" class="btn btn-success projectCreate">
+            <i class="bi bi-plus-circle"></i>
+            Create new project
+        </button>
+    </p>
+}
 
 <div class="list-group">
     @foreach (var item in Model)
@@ -24,11 +46,21 @@
     }
 </div>
 
+
 @section scripts
 {
     <script type="text/javascript">
         $(function () {
             $.ajaxSetup({ cache: false });
+
+            $(".projectCreate").click(function (e) {
+                e.preventDefault();
+                $.get("Modal/ProjectCreate/" + this.id, function (data) {
+                    $('#projectCreateDialogContent').html(data);
+                    $('#projectCreateModal').modal('show');
+                });
+            });
+
             $(".projectDelete").click(function (e) {
                 e.preventDefault();
                 $.get("Modal/ProjectDelete/" + this.id, function (data) {
@@ -36,6 +68,6 @@
                     $('#projectDeleteModal').modal('show');
                 });
             });
-        })
+        });
     </script>
 }
