Выбор члена семьи при добавлении дохода и значение "Семья" в списке доходов/расходов

--- a/FamilyBudget/Views/Home/Details.cshtml
+++ b/FamilyBudget/Views/Home/Details.cshtml
@@ -142,8 +142,22 @@
             @foreach (FinOperation fo in Model.finOperations)
             {
                 <tr>
-                    <td class="col-3">@if (fo.Category != null) { <label>@fo.Category.Name</label>  }</td>
-                    <td class="col-3">@if (fo.ProjectMember != null) { <label>@fo.ProjectMember.NameInProject</label> }</td>
+                    <td class="col-3">
+                        @if (fo.Category != null)
+                        {
+                            <label>@fo.Category.Name</label>
+                        }
+                    </td>
+                    <td class="col-3">
+                        @if (fo.ProjectMember != null)
+                        {
+                            <label>@fo.ProjectMember.NameInProject</label>
+                        }
+                        else
+                        {
+                            <label>Семья</label>
+                        }
+                    </td>
                     <td class="col-2">@fo.Value</td>
                     <td class="col-2">
                         @if (@fo.CreateTime.Date == DateTime.Today.Date)
