--- a/FamilyBudget/Views/Modal/ProjectCreate.cshtml
+++ b/FamilyBudget/Views/Modal/ProjectCreate.cshtml
@@ -14,8 +14,7 @@
           <div asp-validation-summary="ModelOnly" class="text-danger"></div>
           <div class="modal-body">
             <div class="form-group">
-                <label asp-for="Name" class="control-label"></label>
-                <input asp-for="Name" class="form-control" />
+                <input asp-for="Name" class="form-control" placeholder="Enter the project name"/>
                 <span asp-validation-for="Name" class="text-danger"></span>
             </div>
             <div class="form-group">
@@ -25,7 +24,7 @@
           <div class="modal-footer">
             <div class="form-group">
             <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-            <input type="submit" value="Create" class="btn btn-success" />
+            <input type="submit" value="Create" class="btn btn-success"/>
             </div>
           </div>
       </form>
